# ai-dev-process

./: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  requirements-lock.txt
.github/workflows/: analyze-issues.yml  docker-publish.yml
ai_dev_process.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
analysis/1/: analysis.json  analysis_iter1.json  analysis_iter1.md  analysis_iter2.json  analysis_iter2.md  review_iter1.json  review_iter2.json
analysis/3/: analysis.json  analysis_iter1.json  analysis_iter1.md  analysis_iter2.json  analysis_iter2.md  review_iter1.json  review_iter2.json
analysis/4/: analysis.json  analysis_iter1.json  analysis_iter1.md  review_iter1.json
docs/: how-it-works.md  how-to-integrate-with-github.md  how-to-integrate-with-gitlab.md
plans/1/: plan.json  plan.md
plans/3/: plan.json  plan.md
prompts/: analyst_initial.md  analyst_revision.md  analyst_system.md  developer_initial.md  developer_revision.md  developer_system.md  mr_reviewer_initial.md  mr_reviewer_system.md  plan_reviewer_initial.md  plan_reviewer_system.md  planner_initial.md  planner_revision.md  planner_system.md  reviewer_prompt.md  reviewer_system.md
src/: config.py  logging_config.py
src/context/: gatherer.py
src/forge/: client.py
src/github/: client.py
src/gitlab/: branches.py  client.py  labels.py
src/models/: analysis.py  mr_review.py  plan.py  review.py  state.py
src/pipeline/: claude_code.py  claude_dev.py  claude_plan.py  codex.py  codex_mr.py  codex_plan.py  dev_edges.py  dev_graph.py  dev_nodes.py  edges.py  main.py  (+6 more)
tests/: conftest.py
(+30 files in other folders)
