[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-process"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-gitlab>=4.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
pipeline = [
    # Analyst runs via the Claude Code CLI; reviewer runs via the Codex CLI.
    # Neither calls the LLM APIs directly, so no langchain-openai needed.
    "langgraph>=1.0",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "httpx>=0.27",
    "pip-tools>=7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
